2008/03/07 - G. Giunta (giunta.gaetano@gmail.com)

 * improve Makefile for windows xp

 * update copyright notices to year 2008

 * update yui to version 2.5.0

2007/09/24 - G. Giunta (giunta.gaetano@gmail.com) thanks James Pritchard

 * fix a bug in error log handler when using firefox+firebug

 * fix an error in the javadoc documentation

2007/07/13 - G. Giunta (giunta.gaetano@gmail.com) thanks Michele Locati

 * fix a bug in xmlrpc_decode with structs

 * fix a bug in parsing cookie headers in http responses

 * added two demo files, for WSH and VB

2007/07/11 - G. Giunta (giunta.gaetano@gmail.com)

 * allow lib to work in Windows Scripting Host environments

2007/06/26 - G. Giunta (giunta.gaetano@gmail.com)

 * doc/Makefile: improve packaging of javadocs

 * tagged and released as version 0.3

2007/06/25 - G. Giunta (giunta.gaetano@gmail.com)

 * fix calls failing on Safari when port is not specified in server url, plus
   another minor Safari fix (change order in which http headers are set)

2007/06/23 - G. Giunta (giunta.gaetano@gmail.com), thanks Bob Langley

 * fix decoding of structs using xmlrpc_decode

2007/06/10 - G. Giunta (giunta.gaetano@gmail.com), thanks Firebug

 * fix name of function iso8601_decode (was is08601_decode)

 * remove an extraneous 'port' var from global scope

 * take advantage of firebug console for logging if it is available

2007/06/05 - G. Giunta (giunta.gaetano@gmail.com), thanks to Vito Covito

 * fix error messages when decoding invalid xmlrpc types

 * fix parsing of boolean values

2007/06/04 - G. Giunta (giunta.gaetano@gmail.com), thanks to Vito Covito

 * fix serialization of struct members (was using 'element' instead of 'member')

 * fix handling of client return type in async calls without a specific timeout

2007/05/21 - G. Giunta (giunta.gaetano@gmail.com)

 * fix parsing of dateTime values

2007/05/12 - G. Giunta (giunta.gaetano@gmail.com)

 * xmlrpc_wrappers.js: allow wrapping functions to be called without the