@@ -96,7 +96,7 @@ var xmlrpcName = 'XML-RPC for JAVASCRIPT';
 * Library version number. Used in the client's httprequests to identify self to server
 * @type string
 */
-var xmlrpcVersion = '0.3';
+var xmlrpcVersion = '0.4';
 
 // let user errors start at 800
 var xmlrpcerruser = 800;
@@ -120,6 +120,11 @@ var xmlrpcstr = {
 	multicall_error: 'Received from server invalid multicall response',
 	no_parser: 'no support for parsing xml compiled in'
 }
+
+// set to TRUE to enable correct decoding of <NIL/> and <EX:NIL/> values
+var xmlrpc_null_extension = false;
+// set to TRUE to enable encoding of php NULL values to <EX:NIL/> instead of <NIL/>
+var xmlrpc_null_apache_encoding = false;
 
 var _xh = null;
 
@@ -174,7 +179,7 @@ function xmlrpc_client (path, server, port, method)
 	this.polling_interval = 50;
 	this.polling_queue = [];
 	this.tid = 0;
-
+	this.user_agent = xmlrpcName + ' ' + xmlrpcVersion;
 	this.init(path, server, port, method);
 }
 
@@ -280,6 +285,16 @@ xmlrpc_client.prototype.setCredentials = function (username, password, authtype)
 	//}
 }
 
+/**
+* Set user-agent string that will be used by this client instance
+* in http headers sent to the server
+* @param {string} agentstring
+* @public
+*/
+xmlrpc_client.prototype.setUserAgent = function(agentstring)
+{
+	this.user_agent = agentstring;
+}
 /**
 * Send an xmlrpc request.
 *
@@ -410,7 +425,7 @@ xmlrpc_client.prototype.send = function (msg, timeout, method)
 
 	/// @todo add support for setting cookies by hand
 
-	httpconn.setRequestHeader('User-Agent', xmlrpcName + ' ' + xmlrpcVersion);
+	httpconn.setRequestHeader('User-Agent', user_agent);
 	httpconn.setRequestHeader('Content-type', msg.content_type);
 	if (!this.keepalive)
 	{
@@ -1049,7 +1064,14 @@ xmlrpcval.prototype.serialize = function (charset_encoding)
 			var result = '<base64>'+base64_encode(this.me)+'</base64>';
 			break;
 		case 9:
-			var result = '<nil/>';
+		    if (xmlrpc_null_apache_encoding)
+		    {
+		        var result = '<ex:nil/>';
+		    }
+		    else
+		    {
+		        var result = '<nil/>';
+		    }
 			break;
 		case 2:
 			var result = '<array>\n<data>\n';
@@ -2224,6 +2246,7 @@ function xmlrpc_decode_xml(xml_val, options) {
 * @public
 */
 function base64_decode (aString) {
+    aString = aString.replace(/^\s+|\s+$/g, "");
 	if ((aString.length % 4) == 0)
 	{
 		if (typeof atob == 'function')
@@ -2627,6 +2650,14 @@ function parseXmlrpcValue(node, return_jsvals)
 						}
 					}
 					break;
+                case 'nil':
+                case 'ex:nil':
+                    if (xmlrpc_null_extension)
+                    {
+                        ret = null;
+                        break;
+                    }
+                    // fall through voluntarily
 				default:
 					throw 'Found incorrect element inside \'value\' :'+ child.tagName;
 
